2003-05-26  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* libnautilus/Makefile.am: link only dependent libraries.

	Patch reviewed by:  Alexander Larsson  <alexl@redhat.com>

2003-05-26  Alexander Larsson  <alexl@redhat.com>

	Patch by Christian Neumair <chris@gnome-de.org>

	* src/nautilus-bookmarks-window.glade:
	* src/nautilus-file-management-properties.glade:
	* src/nautilus-server-connect.glade:
	Some HIG changes wrt spacing
	
	* src/file-manager/fm-properties-window.c:
	* src/nautilus-property-browser.c:
	Small string changes.

2003-05-26  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-bookmarks-window.c (repopulate):
	row_activated_signal_id is on the bookmar_list_widget object and
	nothing else.

2003-05-23  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-desktop-icon-file.c:
	Don't ref directory twice. Rename finalizer.
	
	* libnautilus-private/nautilus-desktop-link-monitor.c:
	unref monitor on shutdown
	Unref correct object in finalize

	* libnautilus-private/nautilus-desktop-link.c:
	unref icon file in finalizer.
	
2003-05-23  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-desktop-link-monitor.c (create_volume_link):
	Fix the volume uniquification code.

2003-05-23  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (fm_icon_view_screen_changed):
	Update the per-screen filtering when the view changes screens.
	This was needed to fix multihead desktops, since the BonoboPlug
	initially realizes on the wrong screen, and gets moved to the right
	screen when the window is mapped.

2003-05-20  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-model.c: (each_path_get_data_binder):
	* src/file-manager/fm-list-view.c: (get_drag_pixbuf),
	(motion_notify_callback): Don't use the pointer offset when
	setting the drag icon.

2003-05-20  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c (get_desktop_manager_selection,