@@ -45,8 +45,6 @@ libnautilus_private_la_SOURCES = \
 	$(nautilus_metafile_server_idl_sources)	\
 	nautilus-audio-player.c \
 	nautilus-audio-player.h \
-	nautilus-authn-manager.c \
-	nautilus-authn-manager.h \
 	nautilus-bonobo-extensions.c \
 	nautilus-bonobo-extensions.h \
 	nautilus-bookmark.c \
