@@ -1,3 +1,11 @@
+2003-05-26  Anders Carlsson  <andersca@codefactory.se>
+
+	* libnautilus-private/Makefile.am:
+	* libnautilus-private/nautilus-authn-manager.c:
+	* libnautilus-private/nautilus-authn-manager.h:
+	* src/nautilus-application.c: (finish_startup):
+	Use the authentication manager from libgnomeui instead.
+	
 2003-05-26  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
 
 	* libnautilus/Makefile.am: link only dependent libraries.
